created main text with sign up button and image placeholder

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <header class="top">
+    <header>
         <h3 class="logo">Header Logo</h3>
         <div class="header-link">
             <a href="#">Header link one</a>
@@ -16,5 +16,23 @@
             <a href="#">Header link three</a>
         </div>
     </header>
+    <main>
+        <div class="hero">
+            <h1>This is my first landing page</h1>
+            <p class="secondary">This has some subtext that goes here under the main title. 
+                It's a smaller font and the color is lower contrast.
+            </p>
+            <a class="sign-up" href="#">Sign up</a>
+        </div>
+        <div class="image-placeholder">
+            <h4>This is a placeholder for an image.</h4>
+        </div>
+    </main>
+
+
+
+    <footer>
+        <p>Copyright Info</p>
+    </footer>
 </body>
 </html>
