--- a/index.html
+++ b/index.html
@@ -28,7 +28,29 @@
             <h4>This is a placeholder for an image.</h4>
         </div>
     </main>
-
+    <div class="gallery">
+        <div class="gallery-heading">
+            <h2>Some random information</h2>
+        </div>
+        <div class="img-txt">
+            <div class="info">
+                <img class="item" src="#" alt="#">
+                <div class="subtext">This is subtext below an image</div>
+            </div>
+            <div class="info">
+                <img class="item" src="#" alt="#">
+                <div class="subtext">This is subtext below an image</div>
+            </div>
+            <div class="info">
+                <img class="item" src="#" alt="#">
+                <div class="subtext">This is subtext below an image</div>
+            </div>
+            <div class="info">
+                <img class="item" src="#" alt="#">
+                <div class="subtext">This is subtext below an image</div>
+            </div>
+        </div>
+    </div>
 
 
     <footer>
