added another section with a quote placeholder

--- a/index.html
+++ b/index.html
@@ -20,7 +20,9 @@
         <div class="hero">
             <h1>This is my first landing page</h1>
             <p class="secondary">This has some subtext that goes here under the main title. 
-                It's a smaller font and the color is lower contrast.
+                It's a smaller font and the color is lower contrast. Below is a signup button that can 
+                link to another page, right now it leads back to this same page. I am adding more text so 
+                that this will look more balance on fulscreen. maybe a bit more text will do.
             </p>
             <a class="sign-up" href="#">Sign up</a>
         </div>
@@ -49,6 +51,15 @@
                 <img class="item" src="#" alt="#">
                 <div class="subtext">This is subtext below an image</div>
             </div>
+        </div>
+    </div>
+    <div class="container">
+        <div class="testimonial">
+            <p class="text">This can be a testimonial, quote or mission statement.
+                It is italicized and centered to give it emphasis. It will be attributed to someone, 
+                perhaps an author.
+            </p>
+            <p class="author">-Author, Unknown</p>
         </div>
     </div>
 
