--- a/index.html
+++ b/index.html
@@ -62,6 +62,16 @@
             <p class="author">-Author, Unknown</p>
         </div>
     </div>
+    <div class="finale">
+        <div class="call-to-action">
+            <div id="call">
+                <p id="call-main">Call to action! It's time!</p>
+                <p id="call-sub">Sign up for our product by clicking that button 
+                    right over there!</p>    
+            </div>
+            <a class="sign-up2" href="#">Sign up</a>
+        </div>
+    </div>
 
 
     <footer>
